<resources>
    <string name="app_name">App011</string>
    <string name="name">Name</string>
    <string name="marks">Marks</string>
    <string name="roll_no">Roll no</string>
    <string name="name_n_n">Name\n\n</string>
    <string name="marks_n_n">Marks\n\n</string>
    <string name="roll_no_n_n">Roll no\n\n</string>
    <string name="insert">Insert</string>
    <string name="fetch">Fetch</string>
    <string name="delete">Delete</string>
    <string name="view_all">View all</string>
    <string name="clear">Clear</string>
    <string name="student_details">STUDENT DETAILS</string>
</resources>