<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ViewActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="62dp"
        android:layout_height="45dp"
        android:layout_marginStart="330dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="#D50000"
        android:backgroundTintMode="src_over"
        android:foregroundTint="#D50000"
        android:foregroundTintMode="add"
        android:hapticFeedbackEnabled="true"
        android:shadowColor="#D50000"
        android:textAlignment="center"
        android:textColor="#D50000"
        android:textColorHighlight="#D50000"
        android:textColorHint="#D50000"
        android:textColorLink="#D50000"
        app:icon="@android:drawable/ic_menu_close_clear_cancel"
        app:iconPadding="0dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="#D50000"
        app:strokeColor="#D50000" />

    <ScrollView
        android:id="@+id/scrollView6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/Roll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20sp"
                android:layout_weight="1"
                android:padding="10sp"
                android:text="@string/roll_no_n_n"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/Name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20sp"
                android:layout_weight="1"
                android:padding="10sp"
                android:text="@string/name_n_n"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/Mark"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20sp"
                android:layout_weight="1"
                android:padding="10sp"
                android:text="@string/marks_n_n"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="15sp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>